Updated footer, added plaque, blog article

--- a/index.html
+++ b/index.html
@@ -50,8 +50,14 @@
             </ul>
         </section>
         <section class="footer">
-            <span class="footer-quote">See, here's the thing...</span>
-            <p>Currywurst site</p>
+            <p>The <strong>Herta Heuwer</strong> plaque, commemorating the inventor of the currywurst, 
+                is located in Berlin-Charlottenburg:</p>
+            <img src="images/plaque.jpg" atl="Herta Heuwer Plaque">
+            <p class="footer-quote">"Here was the snack stand where <b>Herta Heuwer</b>
+            invented the savory Chillup sauce for the currywurst on September 4, 1949, which is now known 
+            all over the world. Her idea is tradition and eternal delight". </p>
+            <h3>Read more about Herta in this article about the heritage of Currywurst:</h3>
+            <a href="https://currywurst.berlin/en/blog/731WThfkQrw7rQoGQjCRqU">If it wasn't for Herta you wouldn't be here!</a>
         </section>
     </body>
 </html>
