minor image adjustments

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <section class="intro">
             <h1>A Tribute to Herta Heuwer</h1>
             <figure id="herta-img">
-                <p>The German Chef who is loved by billions worldwide</p>
+                <h3>The German Chef who is loved by billions worldwide</h3>
                 <img src="images/herta.jpg">
                 <figcaption id="herta-caption">
                     Chef Herta Charlott Heuwer shows off her
@@ -28,7 +28,7 @@
                 <li><strong>1949:</strong> Heuwer, while running her snack bar, experimented with a 
                     sauce made from tomato paste, Worcestershire sauce, curry powder and other spices,
                     which she then poured over boiled, fried, or grilled pork sausage.
-                    <img id="sausage" src="images/currywurst.jpg">
+                    <img id="sausage-img" src="images/currywurst.jpg">
                 </li>
                 <li><strong>September, 1949:</strong> Heuwer started selling her "Spezial Curry Bratwurst" 
                     from her stall in Charlottenburg. This is when this dish earned the appelation of Currywurst.</li>
@@ -45,18 +45,18 @@
                 <li><strong>January 2019:</strong> Berlin State Mint minted a commemorative medal to mark the 
                     70th anniversary of the invention of the Currywurst, on which she is depicted 
                     together with two currywursts.
-                    <img id="coin" src="images/coin.jpg" alt="currywurst-coin">
+                    <img id="coin-img" src="images/coin.jpg" alt="currywurst-coin">
                 </li>
             </ul>
         </section>
         <section class="footer">
             <p>The <strong>Herta Heuwer</strong> plaque, commemorating the inventor of the currywurst, 
                 is located in Berlin-Charlottenburg:</p>
-            <img src="images/plaque.jpg" atl="Herta Heuwer Plaque">
+            <img class="plaque-img" src="images/plaque.jpg" atl="Herta Heuwer Plaque">
             <p class="footer-quote">"Here was the snack stand where <b>Herta Heuwer</b>
             invented the savory Chillup sauce for the currywurst on September 4, 1949, which is now known 
             all over the world. Her idea is tradition and eternal delight". </p>
-            <h3>Read more about Herta in this article about the heritage of Currywurst:</h3>
+            <h3>Read more about Herta's heritage of Currywurst:</h3>
             <a href="https://currywurst.berlin/en/blog/731WThfkQrw7rQoGQjCRqU">If it wasn't for Herta you wouldn't be here!</a>
         </section>
     </body>
